Added backup/restore functionality. Added the ability to create a new Stremio account.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -4,16 +4,16 @@
   "what_does_it_do_desc": "Der Stremio Account Bootstrapper ermöglicht es dir, dein Stremio-Konto mit nur wenigen Klicks einzurichten, indem ein Preset in dein Konto übernommen wird. Praktisch für Neulinge, für diejenigen, die eine solide Grundlage für ihr Setup möchten, oder um den Prozess für neue Konten von Familienmitgliedern oder Freunden zu beschleunigen.",
   "which_addons_title": "Welche Addons sind im Preset enthalten?",
   "instructions_title": "Anleitung",
-  "instructions_1": "Melde dich mit deinen Stremio-Zugangsdaten an oder hole dir den Stremio Authkey. Falls du dein Konto über Facebook erstellt hast, nutze bitte letzteres <a href=\"#how\">(?)</a>.",
-  "instructions_2": "Wähle dein bevorzugtes Preset.<br /><i>Die Factory-Option setzt das Konto auf den Zustand eines frisch erstellten Kontos zurück.</i>",
-  "instructions_3": "Wähle deinen Debrid-Dienst und gib den API-Schlüssel ein (optional) <a href=\"#faq\">(?)</a>.<br />Wenn du ihn nicht angibst, ⚠️ <strong class=\"text-error\">wirst du torrenten</strong> ⚠️. Bitte informiere dich über die Gesetze zum Torrenting in deinem Land, bevor du fortfährst.",
-  "instructions_4": "Wähle zusätzliche Addons/Optionen (optional).",
-  "instructions_5": "Gib deinen RPDB-Schlüssel ein (optional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
-  "instructions_6": "Passe das Addon-Preset an (optional). Du kannst Addons entfernen oder sortieren sowie die AIOLists/Anime Kitsu-Kataloge umbenennen oder löschen.",
-  "instructions_7": "Wenn du fertig bist, klicke auf \"Mit Stremio synchronisieren\", um dein Konto zu aktualisieren.",
-  "instructions_8": "Gehe zu den Stremio-Einstellungen, um deine bevorzugte Sprache einzustellen.",
-  "instructions_9": "Genieße deine Lieblingsfilme, Serien und Live-TV!",
-  "warning": "⚠️ Du wirst <strong class=\"text-error\">das bestehende Setup löschen</strong> und es gibt derzeit keine Möglichkeit, die vorherige Konfiguration <strong class=\"text-error\">wiederherzustellen</strong>. ⚠️<br /><strong>Benutzung auf eigene Gefahr. Es wird kein Support angeboten.</strong>",
+  "instructions_1": "Melde dich mit deinen Stremio-Zugangsdaten an oder hole dir den Stremio Authkey. Wenn du dein Konto über Facebook erstellt hast, verwende bitte Letzteres <a href=\"#how\">(?)</a>. Falls du noch kein Konto hast, kannst du eines erstellen, indem du auf \"Registrieren\" klickst.",
+  "instructions_2": "Erstelle ein Backup deiner aktuellen Konfiguration (empfohlen). So kannst du dein aktuelles Setup bei Bedarf wiederherstellen.",
+  "instructions_3": "Wähle dein bevorzugtes Preset.<br /><i>Die Factory-Option ermöglicht es dir, das Konto auf den Zustand eines neu erstellten Kontos zurückzusetzen.</i>",
+  "instructions_4": "Wähle deinen Debrid-Dienst und gib den API-Schlüssel ein (optional) <a href=\"#faq\">(?)</a>.<br />Wenn du darauf verzichtest, ⚠️ <strong class=\"text-error\">wirst du torrenten</strong> ⚠️. Bitte informiere dich über die Richtlinien deines Landes zum Torrenting, bevor du fortfährst.",
+  "instructions_5": "Wähle zusätzliche Addons/Optionen (optional).",
+  "instructions_6": "Gib deinen RPDB-Schlüssel ein (optional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
+  "instructions_7": "Passe das Addon-Preset an (optional). Du kannst Addons entfernen oder sortieren sowie die AIOLists/Anime Kitsu-Kataloge umbenennen oder löschen.",
+  "instructions_8": "Wenn du fertig bist, klicke auf \"Mit Stremio synchronisieren\", um dein Konto zu aktualisieren.",
+  "instructions_9": "Gehe zu den Stremio-Einstellungen, um deine bevorzugten Sprachoptionen anzupassen.",
+  "warning": "⚠️ Du wirst <strong class=\"text-error\">das bestehende Setup löschen</strong>. Es wird empfohlen, vorher ein Backup zu erstellen. ⚠️<br /><strong>Benutzung auf eigene Gefahr. Es wird kein Support angeboten.</strong>",
   "note": "Hinweis: Wenn du nach dem Klick auf \"Preset-Addons laden\" die Sprache oder den Debrid-API-Schlüssel ändern möchtest, musst du die Seite neu laden und von vorne beginnen.",
   "login": "Anmelden",
   "logged_in": "Angemeldet",
@@ -56,7 +56,7 @@
   "how_step3": "Nimm den Ausgabewert und füge ihn oben ins Formular ein.",
   "faq_title": "FAQ",
   "faq_risks_summary": "Welche Risiken gibt es?",
-  "faq_risks_desc": "Du wirst das bestehende Setup löschen und es gibt derzeit keine Möglichkeit, die vorherige Konfiguration wiederherzustellen. Es wird empfohlen, dies nur bei einem frischen Konto oder wenn du ein komplett neues Setup möchtest, zu verwenden.",
+  "faq_risks_desc": "Du wirst das bestehende Setup löschen, bitte erstelle vorher ein Backup. Es wird empfohlen, dies auf einem frischen Konto oder einem Konto zu verwenden, bei dem du mit einem komplett neuen Setup starten möchtest.",
   "faq_credentials_summary": "Sind meine Zugangsdaten sicher?",
   "faq_credentials_desc1": "Ja. Wir verwenden deine Zugangsdaten nur zur Authentifizierung mit der Stremio-API. Sie werden nicht gespeichert; sobald du die Seite neu lädst, sind sie gelöscht.",
   "faq_credentials_desc2": "Wenn du trotzdem Zweifel hast, empfehlen wir dir, den Quellcode zu lesen. Du wirst sehen, dass es keine versteckten Tricks gibt.",
@@ -79,5 +79,20 @@
   "credits_title": "Credits",
   "credits_text": "Dieses Tool basiert auf der ursprünglichen <code><a href=\"https://github.com/pancake3000/stremio-addon-manager\" target=\"_blank\">pancake3000</a></code>-Arbeit und dem <code><a href=\"https://github.com/redd-ravenn/stremio-addon-manager\" target=\"_blank\">redd-ravenn</a></code>-Fork, mit der Zusammenarbeit von <code>Sleeyax</code> und <code>&lt;Code/&gt;</code>. Ohne ihren Beitrag zur Stremio-Community wäre diese Idee nicht möglich gewesen 🙏.",
   "footer_credit": "Mit ❤️ von DryKillLogic",
-  "footer_source_code": "Quellcode"
+  "footer_source_code": "Quellcode",
+  "instructions_10": "Genieße deine Lieblingsfilme, Serien und Live-TV!",
+  "authentication": "Authentifizierung",
+  "backup_restore": "Backup/Wiederherstellung",
+  "backing_up": "Backup wird erstellt...",
+  "backup_config": "Backup-Konfiguration",
+  "restoring": "Wiederherstellung läuft...",
+  "restore_config": "Konfiguration wiederherstellen",
+  "signup": "Registrieren",
+  "register_failed": "Registrierung fehlgeschlagen",
+  "register_successful": "Registrierung erfolgreich",
+  "backup_saved": "Backup saved",
+  "backup_failed": "Backup failed",
+  "restore_failed": "Restore failed",
+  "restore_successful": "Restore successful",
+  "invalid_backup_file": "Invalid backup file"
 }
