--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,20 +1,20 @@
 {
   "addon_summary": "Configura tu cuenta de Stremio con solo unos clics.",
-  "what_does_it_do_title": "¿Para que sirve?",
+  "what_does_it_do_title": "¿Para qué sirve?",
   "what_does_it_do_desc": "Stremio Account Bootstrapper te permite configurar tu cuenta de Stremio con solo unos clics, incorporando una configuración preestablecida en tu cuenta. Es útil para quienes son nuevos, quienes desean una base sólida para construir su configuración, o para agilizar el proceso de crear cuentas nuevas para familiares o amigos.",
   "which_addons_title": "¿Qué complementos incluye el preset?",
   "instructions_title": "Instrucciones",
-  "instructions_1": "Inicia sesión con tus credenciales de Stremio o consigue la Authkey de Stremio. Si creaste tu cuenta a través de Facebook, por favor usa la segunda opción <a href=\"#how\">(?)</a>.",
-  "instructions_2": "Selecciona tu preset preferido.<br /><i>La opción Fabrica te permite restablecer la cuenta al mismo estado que una recién creada.</i>",
-  "instructions_3": "Selecciona tu servicio de debrid e ingresa la clave API (opcional) <a href=\"#faq\">(?)</a>.<br />Si decides no incluirla, ⚠️ <strong class=\"text-error\">usarás torrents</strong> ⚠️. Por favor revisa las políticas de tu país sobre el uso de torrents antes de continuar.",
-  "instructions_4": "Selecciona complementos/opciones adicionales (opcional).",
-  "instructions_5": "Ingresa tu clave RPDB (opcional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
-  "instructions_6": "Personaliza el preset de complementos (opcional). Puedes eliminar u ordenar complementos, y renombrar o borrar los catálogos de AIOLists/Anime Kitsu.",
-  "instructions_7": "Cuando termines de personalizar, haz clic en \"Sincronizar con Stremio\" para actualizar tu cuenta.",
-  "instructions_8": "Ve a la configuración de Stremio para ajustar tus opciones de idioma preferidas.",
-  "instructions_9": "¡Disfruta de tus películas, series y TV en vivo favoritas!",
-  "warning": "⚠️ <strong class=\"text-error\">Se borrará la configuración existente</strong> y actualmente no hay forma de <strong class=\"text-error\">restaurar la configuración anterior</strong>. ⚠️<br /><strong>Úsalo bajo tu propio riesgo. No se ofrece soporte.</strong>",
-  "note": "Nota: Si necesitas cambiar el idioma o la clave API de debrid después de hacer clic en \"Cargar Complementos del Preset\", tendrás que recargar la página y empezar de nuevo.",
+  "instructions_1": "Inicia sesión usando tus credenciales de Stremio o consigue la AuthKey de Stremio. Si creaste tu cuenta a través de Facebook, por favor usa la segunda opción <a href=\"#how\">(?)</a>. Si no tienes una cuenta, puedes crear una haciendo clic en \"Registrarse\".",
+  "instructions_2": "Crea una copia de seguridad de tu configuración actual (recomendado). Esto te permitirá restaurar tu configuración actual si es necesario.",
+  "instructions_3": "Selecciona tu preset preferido.<br /><i>La opción Factory te permite restablecer la cuenta al mismo estado que una recién creada.</i>",
+  "instructions_4": "Selecciona tu servicio de debrid e ingresa la clave API (opcional) <a href=\"#faq\">(?)</a>.<br />Si decides no incluirlo, ⚠️ <strong class=\"text-error\">estarás usando torrents</strong> ⚠️. Por favor revisa las políticas de tu país sobre torrenting antes de continuar.",
+  "instructions_5": "Selecciona addons/opciones adicionales (opcional).",
+  "instructions_6": "Ingresa tu clave RPDB (opcional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
+  "instructions_7": "Personaliza el preset de addons (opcional). Puedes eliminar o ordenar addons, y renombrar o borrar los catálogos de AIOLists/Anime Kitsu.",
+  "instructions_8": "Cuando hayas terminado de personalizar, haz clic en \"Sincronizar con Stremio\" para actualizar tu cuenta.",
+  "instructions_9": "Ve a la configuración de Stremio para ajustar tus opciones de idioma preferidas.",
+  "warning": "⚠️ <strong class=\"text-error\">Se borrará la configuración existente</strong>. Se recomienda crear una copia de seguridad antes de continuar. ⚠️<br /><strong>Úsalo bajo tu propio riesgo. No se proporciona soporte.</strong>",
+  "note": "Nota: Si necesitas cambiar el idioma o la clave API de debrid después de hacer clic en \"Cargar Addons del Preset\", tendrás que recargar la página y empezar de nuevo.",
   "login": "Iniciar sesión",
   "logged_in": "Sesión iniciada",
   "login_failed": "Error al iniciar sesión",
@@ -56,12 +56,12 @@
   "how_step3": "Toma el valor de salida y pégalo en el formulario de arriba.",
   "faq_title": "FAQ",
   "faq_risks_summary": "¿Qué riesgos están involucrados?",
-  "faq_risks_desc": "Se eliminará la configuración existente y no hay forma de restaurar la configuración anterior. Se recomienda usar esto en una cuenta nueva o en una donde desee comenzar con una configuración completamente nueva.",
+  "faq_risks_desc": "Se borrará la configuración existente, por favor crea una copia de seguridad antes de continuar. Se recomienda usar esto en una cuenta nueva o en una donde quieras empezar con una configuración completamente nueva.",
   "faq_credentials_summary": "¿Son seguras mis credenciales?",
-  "faq_credentials_desc1": "Sí. Solo usamos sus credenciales para autenticar con la API de Stremio. No las almacenamos de ninguna manera; tan pronto como actualice la página, se habrán ido.",
-  "faq_credentials_desc2": "Si aún tiene dudas, le recomendamos encarecidamente que lea el código fuente. Verá que no hay nada oculto ni sospechoso.",
+  "faq_credentials_desc1": "Sí. Solo usamos tus credenciales para autenticar con la API de Stremio. No las almacenamos de ninguna manera; tan pronto como actualices la página, se habrán ido.",
+  "faq_credentials_desc2": "Si aún tienes dudas, te recomendamos encarecidamente que leas el código fuente. Verás que no hay nada oculto ni sospechoso.",
   "faq_console_summary": "¿Qué es la consola de desarrollador y cómo la abro?",
-  "faq_console_desc1": "La consola de desarrollador del navegador es una herramienta que registra la información asociada con una aplicación web, como solicitudes de red y errores. También le permite interactuar con la página web cargada utilizando JavaScript. La mayoría de los navegadores modernos tienen una consola de desarrollador integrada.",
+  "faq_console_desc1": "La consola de desarrollador del navegador es una herramienta que registra la información asociada con una aplicación web, como solicitudes de red y errores. También te permite interactuar con la página web cargada utilizando JavaScript. La mayoría de los navegadores modernos tienen una consola de desarrollador integrada.",
   "faq_console_desc2_1": "Usa ",
   "faq_console_guide_link": "esta guía",
   "faq_console_desc2_2": " para abrir la consola de desarrollador de tu navegador, asegurándote de tener abierta la aplicación web de Stremio.",
@@ -79,5 +79,20 @@
   "credits_title": "Créditos",
   "credits_text": "Esta herramienta se basa en el trabajo original de <code><a href=\"https://github.com/pancake3000/stremio-addon-manager\" target=\"_blank\">pancake3000</a></code> y el fork de <code><a href=\"https://github.com/redd-ravenn/stremio-addon-manager\" target=\"_blank\">redd-ravenn</a></code>, con la colaboración de <code>Sleeyax</code> y <code>&lt;Code/&gt;</code>. Esta idea no podría haber llegado a buen término sin su contribución a la comunidad de Stremio 🙏.",
   "footer_credit": "Hecho con ❤️ por DryKillLogic",
-  "footer_source_code": "Código fuente"
+  "footer_source_code": "Código fuente",
+  "instructions_10": "¡Disfruta tus películas, series y TV en vivo favoritas!",
+  "authentication": "Autenticación",
+  "backup_restore": "Copia de seguridad/Restaurar",
+  "backing_up": "Creando copia de seguridad...",
+  "backup_config": "Copia de seguridad de la configuración",
+  "restoring": "Restaurando...",
+  "restore_config": "Restaurar configuración",
+  "signup": "Registrarse",
+  "register_failed": "Error al registrarse",
+  "register_successful": "Registro exitoso",
+  "backup_saved": "Copia de seguridad guardada",
+  "backup_failed": "Error al guardar la copia de seguridad",
+  "restore_failed": "Error al restaurar",
+  "restore_successful": "Restauración exitosa",
+  "invalid_backup_file": "Archivo de copia de seguridad inválido"
 }
