--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,16 +4,16 @@
   "what_does_it_do_desc": "Stremio Account Bootstrapper vous permet de configurer votre compte Stremio en quelques clics en intégrant un préréglage dans votre compte. C'est pratique pour les nouveaux utilisateurs, ceux qui veulent une base solide pour leur configuration, ou pour accélérer la création de nouveaux comptes pour des membres de la famille ou des amis.",
   "which_addons_title": "Quels addons sont inclus dans le préréglage ?",
   "instructions_title": "Instructions",
-  "instructions_1": "Connectez-vous avec vos identifiants Stremio ou obtenez la clé d'authentification Stremio. Si vous avez créé votre compte via Facebook, veuillez utiliser la seconde option <a href=\"#how\">(?)</a>.",
-  "instructions_2": "Sélectionnez votre préréglage préféré.<br /><i>L'option Factory permet de réinitialiser le compte à l'état d'un compte nouvellement créé.</i>",
-  "instructions_3": "Sélectionnez votre service de débridage et saisissez la clé API (optionnel) <a href=\"#faq\">(?)</a>.<br />Si vous choisissez de ne pas l'inclure, ⚠️ <strong class=\"text-error\">vous utiliserez le torrent</strong> ⚠️. Veuillez vérifier la législation de votre pays concernant le torrent avant de continuer.",
-  "instructions_4": "Sélectionnez des addons/options supplémentaires (optionnel).",
-  "instructions_5": "Saisissez votre clé RPDB (optionnel) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
-  "instructions_6": "Personnalisez le préréglage des addons (optionnel). Vous pouvez supprimer ou trier les addons, et renommer ou supprimer les catalogues AIOLists/Anime Kitsu.",
-  "instructions_7": "Une fois la personnalisation terminée, cliquez sur \"Synchroniser avec Stremio\" pour mettre à jour votre compte.",
-  "instructions_8": "Allez dans les paramètres Stremio pour ajuster vos options de langue préférées.",
-  "instructions_9": "Profitez de vos films, séries et TV en direct préférés !",
-  "warning": "⚠️ Vous allez <strong class=\"text-error\">effacer la configuration existante</strong> et il n'existe actuellement aucun moyen de <strong class=\"text-error\">restaurer la configuration précédente</strong>. ⚠️<br /><strong>Utilisez à vos risques et périls. Aucun support n'est fourni.</strong>",
+  "instructions_1": "Connectez-vous avec vos identifiants Stremio ou obtenez la clé d'authentification Stremio. Si vous avez créé votre compte via Facebook, veuillez utiliser la clé d'authentification <a href=\"#how\">(?)</a>. Si vous n'avez pas de compte, vous pouvez en créer un en cliquant sur \"Inscription\".",
+  "instructions_2": "Créez une sauvegarde de votre configuration actuelle (recommandé). Cela vous permettra de restaurer votre configuration si nécessaire.",
+  "instructions_3": "Sélectionnez votre préréglage préféré.<br /><i>L'option Factory permet de réinitialiser le compte à l'état d'un compte nouvellement créé.</i>",
+  "instructions_4": "Sélectionnez votre service de débridage et saisissez la clé API (optionnel) <a href=\"#faq\">(?)</a>.<br />Si vous choisissez de ne pas l'inclure, ⚠️ <strong class=\"text-error\">vous utiliserez le torrent</strong> ⚠️. Veuillez vérifier la législation de votre pays concernant le torrent avant de continuer.",
+  "instructions_5": "Sélectionnez des addons/options supplémentaires (optionnel).",
+  "instructions_6": "Saisissez votre clé RPDB (optionnel) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
+  "instructions_7": "Personnalisez le préréglage des addons (optionnel). Vous pouvez retirer ou trier les addons, et renommer ou supprimer les catalogues AIOLists/Anime Kitsu.",
+  "instructions_8": "Une fois la personnalisation terminée, cliquez sur \"Synchroniser avec Stremio\" pour mettre à jour votre compte.",
+  "instructions_9": "Allez dans les paramètres Stremio pour ajuster vos options de langue préférées.",
+  "warning": "⚠️ Vous allez <strong class=\"text-error\">effacer la configuration existante</strong>. Il est recommandé de créer une sauvegarde avant de continuer. ⚠️<br /><strong>Utilisez à vos risques et périls. Aucun support n'est fourni.</strong>",
   "note": "Note : Si vous devez changer la langue ou la clé API de débridage après avoir cliqué sur \"Charger les addons du préréglage\", vous devrez recharger la page et recommencer.",
   "login": "Connexion",
   "logged_in": "Connecté",
@@ -56,7 +56,7 @@
   "how_step3": "Prenez la valeur de sortie et collez-la dans le formulaire ci-dessus.",
   "faq_title": "FAQ",
   "faq_risks_summary": "Quels sont les risques ?",
-  "faq_risks_desc": "Vous allez effacer la configuration existante et il n'existe actuellement aucun moyen de restaurer la configuration précédente. Il est recommandé d'utiliser cet outil sur un compte neuf ou si vous souhaitez repartir sur une nouvelle configuration.",
+  "faq_risks_desc": "Vous allez effacer la configuration existante, veuillez créer une sauvegarde avant de continuer. Il est recommandé d'utiliser ceci sur un compte neuf ou sur un compte où vous souhaitez repartir de zéro.",
   "faq_credentials_summary": "Mes identifiants sont-ils en sécurité ?",
   "faq_credentials_desc1": "Oui. Nous utilisons vos identifiants uniquement pour vous authentifier auprès de l'API Stremio. Nous ne les stockons pas ; dès que vous actualisez la page, ils sont supprimés.",
   "faq_credentials_desc2": "Si vous avez encore des doutes, nous vous encourageons vivement à lire le code source. Vous verrez qu'il n'y a rien de caché.",
@@ -79,5 +79,20 @@
   "credits_title": "Crédits",
   "credits_text": "Cet outil est basé sur le travail original de <code><a href=\"https://github.com/pancake3000/stremio-addon-manager\" target=\"_blank\">pancake3000</a></code> et le fork de <code><a href=\"https://github.com/redd-ravenn/stremio-addon-manager\" target=\"_blank\">redd-ravenn</a></code>, avec la collaboration de <code>Sleeyax</code> et <code>&lt;Code/&gt;</code>. Cette idée n'aurait pas pu voir le jour sans leur contribution à la communauté Stremio 🙏.",
   "footer_credit": "Réalisé avec ❤️ par DryKillLogic",
-  "footer_source_code": "Code source"
+  "footer_source_code": "Code source",
+  "instructions_10": "Profitez de vos films, séries et TV en direct préférés !",
+  "authentication": "Authentification",
+  "backup_restore": "Sauvegarde/Restauration",
+  "backing_up": "Sauvegarde en cours...",
+  "backup_config": "Sauvegarder la configuration",
+  "restoring": "Restauration en cours...",
+  "restore_config": "Restaurer la configuration",
+  "signup": "S'inscrire",
+  "register_failed": "Échec de l'inscription",
+  "register_successful": "Inscription réussie",
+  "backup_saved": "Backup saved",
+  "backup_failed": "Backup failed",
+  "restore_failed": "Restore failed",
+  "restore_successful": "Restore successful",
+  "invalid_backup_file": "Invalid backup file"
 }
