--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -4,16 +4,16 @@
   "what_does_it_do_desc": "Stremio Account Bootstrapper ti permette di configurare il tuo account Stremio in pochi clic, preimpostando una configurazione nel tuo account. È utile per i nuovi utenti, per chi vuole una base solida su cui costruire la propria configurazione, o per velocizzare la creazione di nuovi account per familiari o amici.",
   "which_addons_title": "Quali addon include la preimpostazione?",
   "instructions_title": "Istruzioni",
-  "instructions_1": "Accedi con le tue credenziali Stremio o ottieni la Stremio Authkey. Se hai creato il tuo account tramite Facebook, usa la seconda opzione <a href=\"#how\">(?)</a>.",
-  "instructions_2": "Seleziona la preimpostazione preferita.<br /><i>L'opzione Factory ti permette di ripristinare l'account allo stato di uno appena creato.</i>",
-  "instructions_3": "Seleziona il tuo servizio debrid e inserisci la chiave API (opzionale) <a href=\"#faq\">(?)</a>.<br />Se scegli di non includerla, ⚠️ <strong class=\"text-error\">userai i torrent</strong> ⚠️. Controlla le normative del tuo paese sui torrent prima di procedere.",
-  "instructions_4": "Seleziona addon/opzioni aggiuntive (opzionale).",
-  "instructions_5": "Inserisci la tua chiave RPDB (opzionale) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
-  "instructions_6": "Personalizza la preimpostazione degli addon (opzionale). Puoi rimuovere o ordinare gli addon, e rinominare o eliminare i cataloghi AIOLists/Anime Kitsu.",
-  "instructions_7": "Quando hai finito di personalizzare, clicca \"Sincronizza con Stremio\" per aggiornare il tuo account.",
-  "instructions_8": "Vai nelle impostazioni di Stremio per modificare le opzioni di lingua preferite.",
-  "instructions_9": "Goditi i tuoi film, serie TV e TV in diretta preferiti!",
-  "warning": "⚠️ <strong class=\"text-error\">Cancellerai la configurazione esistente</strong> e al momento non c'è modo di <strong class=\"text-error\">ripristinare la configurazione precedente</strong>. ⚠️<br /><strong>Usa a tuo rischio. Non è fornito supporto.</strong>",
+  "instructions_1": "Accedi utilizzando le tue credenziali Stremio oppure ottieni la Stremio Authkey. Se hai creato il tuo account tramite Facebook, usa quest'ultima opzione <a href=\"#how\">(?)</a>. Se non hai un account, puoi crearne uno cliccando su \"Sign up\".",
+  "instructions_2": "Crea un backup della tua configurazione attuale (consigliato). Questo ti permetterà di ripristinare la tua configurazione attuale se necessario.",
+  "instructions_3": "Seleziona la tua preimpostazione preferita.<br /><i>L'opzione Factory ti permette di resettare l'account allo stato di uno appena creato.</i>",
+  "instructions_4": "Seleziona il tuo servizio debrid e inserisci la chiave API (opzionale) <a href=\"#faq\">(?)</a>.<br />Se scegli di non includerla, ⚠️ <strong class=\"text-error\">userai i torrent</strong> ⚠️. Controlla le politiche del tuo paese sui torrent prima di procedere.",
+  "instructions_5": "Seleziona addon/opzioni aggiuntive (opzionale).",
+  "instructions_6": "Inserisci la tua chiave RPDB (opzionale) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
+  "instructions_7": "Personalizza la preimpostazione degli addon (opzionale). Puoi rimuovere o ordinare gli addon, e rinominare o eliminare i cataloghi AIOLists/Anime Kitsu.",
+  "instructions_8": "Quando hai finito di personalizzare, clicca \"Sincronizza con Stremio\" per aggiornare il tuo account.",
+  "instructions_9": "Vai nelle impostazioni di Stremio per regolare le opzioni di lingua preferite.",
+  "warning": "⚠️ <strong class=\"text-error\">Cancellerai la configurazione esistente</strong>. Si consiglia di creare un backup prima di procedere. ⚠️<br /><strong>Usa a tuo rischio. Non viene fornito supporto.</strong>",
   "note": "Nota: Se devi cambiare lingua o la chiave API debrid dopo aver cliccato \"Carica Addon Preimpostati\", dovrai ricaricare la pagina e ricominciare.",
   "login": "Accedi",
   "logged_in": "Accesso effettuato",
@@ -56,7 +56,7 @@
   "how_step3": "Prendi il valore di output e incollalo nel modulo sopra.",
   "faq_title": "FAQ",
   "faq_risks_summary": "Quali rischi ci sono?",
-  "faq_risks_desc": "Cancellerai la configurazione esistente e al momento non c'è modo di ripristinare la configurazione precedente. Si consiglia di usarlo su un account nuovo o su uno che vuoi resettare completamente.",
+  "faq_risks_desc": "Cancellerai la configurazione esistente, crea un backup prima di procedere. Si consiglia di usare questo strumento su un account nuovo o su uno dove vuoi iniziare da zero.",
   "faq_credentials_summary": "Le mie credenziali sono al sicuro?",
   "faq_credentials_desc1": "Sì. Usiamo le tue credenziali solo per autenticarti con l'API di Stremio. Non le memorizziamo in alcun modo; appena ricarichi la pagina vengono eliminate.",
   "faq_credentials_desc2": "Se hai ancora dubbi, ti invitiamo a leggere il codice sorgente. Vedrai che non ci sono sorprese nascoste.",
@@ -79,5 +79,20 @@
   "credits_title": "Crediti",
   "credits_text": "Questo strumento si basa sul lavoro originale di <code><a href=\"https://github.com/pancake3000/stremio-addon-manager\" target=\"_blank\">pancake3000</a></code> e sul fork di <code><a href=\"https://github.com/redd-ravenn/stremio-addon-manager\" target=\"_blank\">redd-ravenn</a></code>, con la collaborazione di <code>Sleeyax</code> e <code>&lt;Code/&gt;</code>. Questa idea non sarebbe nata senza il loro contributo alla community di Stremio 🙏.",
   "footer_credit": "Creato con ❤️ da DryKillLogic",
-  "footer_source_code": "Codice sorgente"
+  "footer_source_code": "Codice sorgente",
+  "instructions_10": "Goditi i tuoi film, serie TV e TV in diretta preferiti!",
+  "authentication": "Autenticazione",
+  "backup_restore": "Backup/Ripristino",
+  "backing_up": "Backup in corso...",
+  "backup_config": "Configurazione di backup",
+  "restoring": "Ripristino in corso...",
+  "restore_config": "Ripristina configurazione",
+  "signup": "Registrati",
+  "register_failed": "Registrazione fallita",
+  "register_successful": "Registrazione avvenuta con successo",
+  "backup_saved": "Backup saved",
+  "backup_failed": "Backup failed",
+  "restore_failed": "Restore failed",
+  "restore_successful": "Restore successful",
+  "invalid_backup_file": "Invalid backup file"
 }
