--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -4,16 +4,16 @@
   "what_does_it_do_desc": "O Stremio Account Bootstrapper permite configurar sua conta Stremio com apenas alguns cliques, aplicando um preset à sua conta. É útil para iniciantes, para quem deseja uma base sólida para montar sua configuração ou para agilizar o processo de criar novas contas para familiares ou amigos.",
   "which_addons_title": "Quais addons o preset inclui?",
   "instructions_title": "Instruções",
-  "instructions_1": "Faça login usando suas credenciais do Stremio ou obtenha a Authkey do Stremio. Se você criou sua conta pelo Facebook, use a segunda opção <a href=\"#how\">(?)</a>.",
-  "instructions_2": "Selecione seu preset preferido.<br /><i>A opção Factory permite redefinir a conta para o mesmo estado de uma recém-criada.</i>",
-  "instructions_3": "Selecione seu serviço de debrid e insira a chave da API (opcional) <a href=\"#faq\">(?)</a>.<br />Se optar por não incluir, ⚠️ <strong class=\"text-error\">você irá torrentear</strong> ⚠️. Por favor, revise as políticas do seu país sobre torrent antes de prosseguir.",
-  "instructions_4": "Selecione addons/opções adicionais (opcional).",
-  "instructions_5": "Insira sua chave RPDB (opcional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
-  "instructions_6": "Personalize o preset de addons (opcional). Você pode remover ou ordenar addons, e renomear ou excluir os catálogos AIOLists/Anime Kitsu.",
-  "instructions_7": "Quando terminar de personalizar, clique em \"Sincronizar com Stremio\" para atualizar sua conta.",
-  "instructions_8": "Vá nas configurações do Stremio para ajustar suas opções de idioma preferidas.",
-  "instructions_9": "Aproveite seus filmes, séries e TV ao vivo favoritos!",
-  "warning": "⚠️ Você irá <strong class=\"text-error\">apagar a configuração existente</strong> e não há como <strong class=\"text-error\">restaurar a configuração anterior</strong>. ⚠️<br /><strong>Use por sua conta e risco. Não há suporte.</strong>",
+  "instructions_1": "Faça login usando suas credenciais do Stremio ou obtenha a AuthKey do Stremio. Se você criou sua conta pelo Facebook, use a segunda opção <a href=\"#how\">(?)</a>. Se não tiver uma conta, pode criar uma clicando em \"Registrar-se\".",
+  "instructions_2": "Crie um backup da sua configuração atual (recomendado). Isso permitirá restaurar sua configuração caso necessário.",
+  "instructions_3": "Selecione o preset de sua preferência.<br /><i>A opção Factory permite redefinir a conta para o mesmo estado de uma recém-criada.</i>",
+  "instructions_4": "Selecione seu serviço de debrid e insira a chave da API (opcional) <a href=\"#faq\">(?)</a>.<br />Se optar por não incluir, ⚠️ <strong class=\"text-error\">você irá torrentear</strong> ⚠️. Por favor, revise as políticas do seu país sobre torrent antes de prosseguir.",
+  "instructions_5": "Selecione addons/opções adicionais (opcional).",
+  "instructions_6": "Insira sua chave RPDB (opcional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
+  "instructions_7": "Personalize o preset de addons (opcional). Você pode remover ou ordenar addons, e renomear ou excluir os catálogos AIOLists/Anime Kitsu.",
+  "instructions_8": "Quando terminar de personalizar, clique em \"Sincronizar com Stremio\" para atualizar sua conta.",
+  "instructions_9": "Vá nas configurações do Stremio para ajustar suas opções de idioma preferidas.",
+  "warning": "⚠️ Você irá <strong class=\"text-error\">apagar a configuração existente</strong>. Recomenda-se criar um backup antes de prosseguir. ⚠️<br /><strong>Use por sua conta e risco. Não há suporte.</strong>",
   "note": "Nota: Se precisar mudar o idioma ou a chave da API do debrid após clicar em \"Carregar Addons do Preset\", será necessário recarregar a página e começar novamente.",
   "login": "Entrar",
   "logged_in": "Conectado",
@@ -56,7 +56,7 @@
   "how_step3": "Pegue o valor de saída e cole no formulário acima.",
   "faq_title": "FAQ",
   "faq_risks_summary": "Quais riscos estão envolvidos?",
-  "faq_risks_desc": "Você irá apagar a configuração existente e não há como restaurar a configuração anterior. Recomenda-se usar em uma conta nova ou em uma onde deseja começar do zero.",
+  "faq_risks_desc": "You will wipe the existing setup, please create a backup before proceeding. It is recommended to use this on a fresh account or one where you want to start with a completely new setup.",
   "faq_credentials_summary": "Minhas credenciais estão seguras?",
   "faq_credentials_desc1": "Sim. Usamos suas credenciais apenas para autenticar na API do Stremio. Não armazenamos de nenhuma forma; ao atualizar a página, elas são apagadas.",
   "faq_credentials_desc2": "Se ainda tiver dúvidas, recomendamos fortemente que leia o código-fonte. Você verá que não há nada escondido.",
@@ -79,5 +79,20 @@
   "credits_title": "Créditos",
   "credits_text": "Esta ferramenta é baseada no trabalho original de <code><a href=\"https://github.com/pancake3000/stremio-addon-manager\" target=\"_blank\">pancake3000</a></code> e no fork de <code><a href=\"https://github.com/redd-ravenn/stremio-addon-manager\" target=\"_blank\">redd-ravenn</a></code>, com colaboração de <code>Sleeyax</code> e <code>&lt;Code/&gt;</code>. Esta ideia só foi possível graças à contribuição deles para a comunidade Stremio 🙏.",
   "footer_credit": "Feito com ❤️ por DryKillLogic",
-  "footer_source_code": "Código-fonte"
+  "footer_source_code": "Código-fonte",
+  "instructions_10": "Aproveite seus filmes, séries e TV ao vivo favoritos!",
+  "authentication": "Autenticação",
+  "backup_restore": "Backup/Restaurar",
+  "backing_up": "Fazendo backup...",
+  "backup_config": "Configuração de backup",
+  "restoring": "Restaurando...",
+  "restore_config": "Restaurar configuração",
+  "signup": "Registrar-se",
+  "register_failed": "Falha no registro",
+  "register_successful": "Registro bem-sucedido",
+  "backup_saved": "Backup salvo",
+  "backup_failed": "Falha ao salvar backup",
+  "restore_failed": "Falha ao restaurar",
+  "restore_successful": "Restauração bem-sucedida",
+  "invalid_backup_file": "Arquivo de backup inválido"
 }
