--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,25 +4,40 @@
   "what_does_it_do_desc": "Stremio Account Bootstrapper lets you set up your Stremio account with just a few clicks by bootstrapping a preset into your account. It's handy for newcomers, those who want a solid foundation to build their setup on, or to speed up the process of setting up new accounts for family members or friends.",
   "which_addons_title": "Which addons does the preset include?",
   "instructions_title": "Instructions",
-  "instructions_1": "Log in using your Stremio credentials or get the Stremio Authkey. If you have created your account through Facebook, please use the latter <a href=\"#how\">(?)</a>.",
-  "instructions_2": "Select your preferred preset.<br /><i>The Factory option allows you to reset the account to the same state as a recently created one.</i>",
-  "instructions_3": "Select your debrid service and enter the API key (optional) <a href=\"#faq\">(?)</a>.<br />If you choose not to include it, ⚠️ <strong class=\"text-error\">you will be torrenting</strong> ⚠️. Please review your country's policies on torrenting before proceeding.",
-  "instructions_4": "Select additional addons/options (optional).",
-  "instructions_5": "Enter your RPDB key (optional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
-  "instructions_6": "Customize the addons preset (optional). You have the option to remove or sort addons, and rename or delete the AIOLists/Anime Kitsu catalogs.",
-  "instructions_7": "Once you have finished customizing, click \"Sync to Stremio\" to update your account.",
-  "instructions_8": "Go to Stremio settings to adjust your preferred language options.",
-  "instructions_9": "Enjoy your favorite movies, TV shows, and live TV!",
-  "warning": "⚠️ You will <strong class=\"text-error\">wipe the existing setup</strong> and there's no current way to <strong class=\"text-error\">restore the previous configuration</strong>. ⚠️<br /><strong>Use it at your own risk. No support is provided.</strong>",
+  "instructions_1": "Log in using your Stremio credentials or get the Stremio Authkey. If you have created your account through Facebook, please use the latter <a href=\"#how\">(?)</a>. If you don't have an account, you can create one by clicking \"Sign up\".",
+  "instructions_2": "Create a backup of your current configuration (recommended). This will allow you to restore your current setup if needed.",
+  "instructions_3": "Select your preferred preset.<br /><i>The Factory option allows you to reset the account to the same state as a recently created one.</i>",
+  "instructions_4": "Select your debrid service and enter the API key (optional) <a href=\"#faq\">(?)</a>.<br />If you choose not to include it, ⚠️ <strong class=\"text-error\">you will be torrenting</strong> ⚠️. Please review your country's policies on torrenting before proceeding.",
+  "instructions_5": "Select additional addons/options (optional).",
+  "instructions_6": "Enter your RPDB key (optional) <a href=\"https://ratingposterdb.com/\" target=\"_blank\">(?)</a>.",
+  "instructions_7": "Customize the addons preset (optional). You have the option to remove or sort addons, and rename or delete the AIOLists/Anime Kitsu catalogs.",
+  "instructions_8": "Once you have finished customizing, click \"Sync to Stremio\" to update your account.",
+  "instructions_9": "Go to Stremio settings to adjust your preferred language options.",
+  "instructions_10": "Enjoy your favorite movies, TV shows, and live TV!",
+  "warning": "⚠️ You will <strong class=\"text-error\">wipe the existing setup</strong>. Recommended to create a backup before proceeding. ⚠️<br /><strong>Use it at your own risk. No support is provided.</strong>",
   "note": "Note: If you need to change the language or change the debrid API key after clicking \"Load Preset Addons\", you will need to reload the page and start over.",
-  "login": "Login",
+  "authentication": "Authentication",
+  "login": "Log in",
   "logged_in": "Logged in",
   "login_failed": "Login failed",
+  "signup": "Sign up",
+  "register_failed": "Register failed",
+  "register_successful": "Register successful",
   "stremio_email": "Stremio E-mail",
   "stremio_password": "Stremio Password",
   "or": "OR",
   "paste_authkey": "Paste Stremio AuthKey here...",
   "how_to_get_authkey": "How to get the Stremio Authkey?",
+  "backup_restore": "Backup/Restore",
+  "backing_up": "Backing up...",
+  "backup_config": "Backup configuration",
+  "restoring": "Restoring...",
+  "restore_config": "Restore configuration",
+  "backup_saved": "Backup saved",
+  "backup_failed": "Backup failed",
+  "restore_failed": "Restore failed",
+  "restore_successful": "Restore successful",
+  "invalid_backup_file": "Invalid backup file",
   "configure": "Configure",
   "step0_authenticate": "Step 0: Authenticate",
   "step1_select_preset": "Step 1: Select preset",
@@ -56,7 +71,7 @@
   "how_step3": "Take the output value and paste it into the form above.",
   "faq_title": "FAQ",
   "faq_risks_summary": "What risks are involved?",
-  "faq_risks_desc": "You will wipe the existing setup and there's no current way to restore the previous configuration. It is recommended to use this on a fresh account or one where you want to start with a completely new setup.",
+  "faq_risks_desc": "You will wipe the existing setup, please create a backup before proceeding. It is recommended to use this on a fresh account or one where you want to start with a completely new setup.",
   "faq_credentials_summary": "Are my credentials safe?",
   "faq_credentials_desc1": "Yes. We only use your credentials to authenticate with the Stremio API. We do not store them in any way; as soon as you refresh the page they are gone.",
   "faq_credentials_desc2": "If you're still in doubt, we highly encourage you to go read the source code. You'll see there's no hidden funny business going on.",
